Prevent settings card jump when spinner shows

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,7 @@
 	flex-direction: column;
 	gap: 24px;
 	max-width: 720px;
+	min-height: 100px;
 
 	.components-notice {
 		margin: 0;
